--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -11,6 +12,11 @@
     "mongoose": "^5.13.3"
   },
   "devDependencies": {
+    "eslint": "^7.31.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
