--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -4,7 +4,8 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "testapi": "npm test -- tests/blog_api.test.js"
+    "testapi": "npm test -- tests/blog_api.test.js",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
