--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -5,12 +5,17 @@
   "main": "library-backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gqlapollo": "node library-backend.js"
+    "gqlapollo": "node library-backend.js",
+    "nodemon": "nodemon library-backend.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.1.2",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
