--- a/part9/folder/package.json
+++ b/part9/folder/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^16.7.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   }
