--- a/part10/rate-repository-app/.eslintrc
+++ b/part10/rate-repository-app/.eslintrc
@@ -13,5 +13,8 @@
     "rules": {
       "react/prop-types": "off",
       "semi": "error"
+    },
+    "parserOptions": {
+      "requireConfigFile": false
     }
   }
