--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -6,7 +6,18 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
+    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|react-router-native)"
+    ],
+    "setupFilesAfterEnv": ["<rootDir>/setupTests.js"]
   },
   "dependencies": {
     "@apollo/client": "^3.4.10",
@@ -16,7 +27,7 @@
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.9",
     "graphql": "^15.5.2",
-    "react": "16.13.1",
+    "react": "^16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-web": "~0.13.12",
@@ -28,8 +39,13 @@
     "@babel/core": "^7.9.0",
     "@babel/eslint-parser": "^7.15.0",
     "@expo/webpack-config": "^0.15.0",
+    "@testing-library/jest-native": "^4.0.2",
+    "@testing-library/react-native": "^7.2.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-plugin-jest": "^25.0.1",
+    "eslint-plugin-react": "^7.24.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^42.1.0"
   },
   "private": true
 }
