--- a/part11/full-stack-open-pokedex-master/.github/workflows/pipeline.yml
+++ b/part11/full-stack-open-pokedex-master/.github/workflows/pipeline.yml
@@ -33,3 +33,4 @@ jobs:
       #    heroku_api_key: ${{secrets.HEROKU_API_KEY}}
       #    heroku_app_name: "YOUR APP's NAME"
       #    heroku_email: "YOUR EMAIL"
+      #    healthcheck: "https://[YOUR APP's NAME].herokuapp.com/health"
