--- a/part11/full-stack-open-pokedex-master/.github/workflows/pipeline.yml
+++ b/part11/full-stack-open-pokedex-master/.github/workflows/pipeline.yml
@@ -34,3 +34,6 @@ jobs:
       #    heroku_app_name: "YOUR APP's NAME"
       #    heroku_email: "YOUR EMAIL"
       #    healthcheck: "https://[YOUR APP's NAME].herokuapp.com/health"
+      #    checkstring: "ok"
+      #    rollbackonhealthcheckfailed: true
+  
